<resources>
    <string name="app_name">g3creditApp</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_collectorName">Collector Name</string>
    <string name="header_creditApp_ApplicantInfo">PERSONAL INFORMATION</string>
    <string name="hint_creditApp_lastName">Last Name</string>
    <string name="hint_creditApp_firstName">First Name</string>
    <string name="hint_creditApp_middName">Middle Name</string>
    <string name="hint_creditApp_nickName">Nickname</string>
    <string name="hint_creditApp_suffix">Suffix</string>
    <string name="header_creditApp_gender">GENDER</string>
    <string name="hint_creditApp_male">Male</string>
    <string name="hinti_creditApp_female">Female</string>
    <string name="hinti_creditApp_LGBT">LGBT</string>
    <string name="header_creditApp_civilStat">CIVIL STATUS</string>
    <string name="hint_creditApp_single">Single</string>
    <string name="hint_creditApp_married">Married</string>
    <string name="hint_creditApp_liveIn">Live-In</string>
    <string name="hint_creditApp_separate">Separated</string>
    <string name="hint_creditApp_widowed">Widowed</string>
    <string name="header_creditApp_contact">CONTACT</string>
    <string name="header_creditApp_presentAddress">CURRENT ADDRESS</string>
    <string name="hint_creditApp_houseNo">House No.</string>
    <string name="hint_creditApp_street">Street</string>
    <string name="hint_creditApp_province">Province</string>
    <string name="hinti_creditApp_province">Province</string>
    <string name="hint_creditApp_MobileNo">Mobile No.</string>
    <string name="hint_creditApp_EmailAdd">Email Address</string>
    <string name="hint_creditApp_facebookAcc">Facebook Account</string>
    <string name="hint_creditApp_viberAcc">Viber Account</string>
    <string name="header_creditApp_previousAddress">PERMANENT ADDRESS</string>
    <string name="header_creditApp_birthPlace">BIRTH PLACE</string>
    <string name="header_creditApp_birthdayInfo">BIRTHDATE</string>
    <string name="hint_creditApp_age">Age</string>
    <string name="header_creditApp_parentInfo">PARENT\'S INFORMATION</string>
    <string name="header_creditApp_spouseInfo">SPOUSE INFORMATION</string>
    <string name="hint_creditApp_lnghtStay">Length Of Stay</string>
    <string name="header_creditApp_srcIncome">SOURCE OF INCOME</string>
    <string name="hint_creditApp_compName">Company Name</string>
    <string name="hint_creditApp_compAddress">Address</string>
    <string name="hint_creditApp_compTelNo">Company Telephone No./ Mobile No.</string>
    <string name="hint_creditApp_compLngthService">Length Of Service</string>
    <string name="hint_creditApp_monthlyPay">Monthly Income</string>
    <string name="hint_creditApp_empStats">Employment Status</string>
    <string name="hint_creditApp_empPosition">Position</string>
    <string name="header_creditApp_selfEmployed">IF SELF-EMPLOYED</string>
    <string name="hint_creditApp_businessNature">Nature Of Business</string>
    <string name="hint_creditApp_busMonthlyInc">Est. Monthly Income</string>
    <string name="hint_creditApp_bussAge">Length of Business</string>
    <string name="hint_creditApp_otherIncome">Other Source Of Income</string>
    <string name="btn_creditApp_previous">Previous</string>
    <string name="btn_creditApp_next">Next</string>
    <string name="hint_creditApp_mothername">Mother\'s Maiden Name</string>
    <string name="hint_creditApp_fathername">Father\'s Full Name</string>
    <string name="radioHint_creditApp_government">Government</string>
    <string name="radioHint_creditApp_private">Private</string>
    <string name="radioHint_creditApp_ofw">OFW</string>
    <string name="header_creditApp_empInfo">MEANS INFORMATION</string>
    <string name="hint_creditApp_preferences_fullname">Full Name</string>
    <string name="hint_creditApp_preferences_address">Address</string>
    <string name="hint_creditApp_preferences_contact">Contact</string>
    <string name="hint_creditApp_preferences_relationship">Relationship</string>
    <string name="header_creditApp_billsAndLoans">BILLS AND LOANS</string>
    <string name="header_creditApp_coMakerInfo">CO MAKER\'S INFORMATION</string>
    <string name="hint_creditApp_rental">Rent</string>
    <string name="hint_creditApp_electricity">Electricity</string>
    <string name="hint_creditApp_otherLoans">Other Loans</string>
    <string name="hint_creditApp_creditCard">Credit Card</string>
    <string name="hint_creditApp_creditLimit">Credit Limit</string>
    <string name="hint_creditApp_education">Education</string>
    <string name="hint_creditApp_landmarks">Location Map/Landmarks</string>
    <string name="hint_creditApp_water">Water</string>
    <string name="hint_creditApp_applRelation">Relationship to the Application</string>
    <string name="hint_creditApp_employedAt">Employed At</string>
    <string name="hint_creditApp_contactNo">Contact No.</string>
    <string name="hint_creditApp_birthPlace">Birth Place</string>
    <string name="hint_creditApp_birthday">Birthdate</string>
    <string name="hint_creditApp_emailAdd">Email Address</string>
    <string name="hint_creditApp_maidenName">Applicant\'s Maiden Name</string>
    <string name="label_creditApp_category">Category :</string>
    <string name="label_creditApp_brand">Brand :</string>
    <string name="label_creditApp_model">Model :</string>
    <string name="label_creditApp_answerYes">Yes</string>
    <string name="label_creditApp_answerNo">No</string>
    <string name="header_creditApp_selectModel">SELECT MODEL</string>
    <string name="header_creditApp_productsList">PRODUCTS LIST</string>
    <string name="header_creditApp_introQuestion">INTRODUCTORY QUESTION</string>
    <string name="hint_creditApp_NoPhones">Number of phones</string>
    <string name="hint_creditApp_nationality">Nationality</string>
    <string name="hint_creditApp_landmark">Landmark</string>
    <string name="hint_creditApp_barangay">Barangay</string>
    <string name="hint_creditApp_town">Town</string>
    <string name="header_creditApp_houseOwn">Ownership Of House</string>
    <string name="label_creditApp_careTaker">Care Taker</string>
    <string name="hint_creditApp_rentExp">Rent Expense</string>
    <string name="label_creditApp_owned">Owned</string>
    <string name="hint_creditApp_relationOwner">Relation to the owner of the house</string>
    <string name="header_creditApp_empSector">EMPLOYMENT SECTOR</string>
    <string name="header_creditApp_ntrBusiness">NATURE OF BUSINESS</string>
    <string name="header_creditApp_jobTitle">POSITION OR JOB TITLE</string>
    <string name="hint_creditApp_spcfcJobTitle">Specific Position Or Job Title</string>
    <string name="hint_creditApp_bussName">Name of Business</string>
    <string name="hint_creditApp_monthlyExp">Monthly Expense</string>
    <string name="header_creditApp_pensionSource">PENSION SOURCE</string>
    <string name="header_creditApp_otherSrcIncm">OTHER SOURCE OF INCOME</string>
    <string name="hint_creditApp_ntrIncome">Nature of Income</string>
    <string name="hint_creditApp_rngeOfIncome">Range of Income</string>
    <string name="hinti_creditApp_country">Country</string>
    <string name="hint_creditApp_telephoneNo">Telephone No.</string>
    <string name="header_creditApp_residenceInfo">RESIDENCE INFORMATION</string>
    <string name="label_creditApp_addDepedent_instruction">To add dependent, Please fill up all the fields first then click/tap the \'Add Child/Dependent\' button. You can notice if the dependent is added if name was displayed in this area. To remove dependent just tap or click the \'Remove\' on the right side of the name displayed.</string>

    <string name="free_text_restriction">ABCDEFGHIJKLMNOPQRSTUVWXYZ abcdefghijklmnopqrstuvwxyz1234567890ēāéñễấũ.,/-</string>
</resources>
